# hungarian-algorithm-cpp

./: 20,20.json  CMakeLists.txt  README.md  brute_force.cpp  cpp_intermediate_result.txt  cpp_result.txt  example1.txt  example2.txt  example3.txt  example4_10x10.txt  example5_20x20.txt  hungarian.cpp  hungarian.hpp  main.cpp  python_intermediate_result.txt  python_result.txt  runtime.xlsx
instance/: 100x100.txt  100x100_seed_42.txt  10x10_seed_42.txt  10x9_seed_42.txt  200x200.txt  200x200_seed_42.txt  20x20.txt  20x20_seed_42.txt  50x50.txt  50x50_seed_42.txt  9x10_seed_42.txt  example1.txt  example3.txt
